# spotify_top_songs

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml.template
src/: __init__.py  __version__.py
